V1 Random neural network - petite update